--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -108,6 +108,8 @@ obj-$(CONFIG_TCG_TPM)		+= tpm/
 
 obj-$(CONFIG_PS3_FLASH)		+= ps3flash.o
 
+obj-$(CONFIG_CSKY_SERIAL)     	+= csky_serial.o
+
 obj-$(CONFIG_JS_RTC)		+= js-rtc.o
 js-rtc-y = rtc.o
 
